--- a/login-page/src/components/Home/Home.module.css
+++ b/login-page/src/components/Home/Home.module.css
@@ -8,6 +8,7 @@
   justify-content: space-around;
   border: 1.5px solid rgb(189, 174, 174);
   border-radius: 12px;
+  font-weight: ;
 }
 .item {
   cursor: pointer;
